--- a/chat_frontend/package.json
+++ b/chat_frontend/package.json
@@ -10,9 +10,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "net": "^1.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "sockjs-client": "^1.6.1"
+    "sockjs-client": "^1.6.1",
+    "stompjs": "^2.3.3"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
